--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <title>landingpage</title>
@@ -55,17 +56,63 @@
                 <p>Gestalte mit Via individuelle Erinnerungsräume für <br> dich, deine Freunde und Familie.</p>
                 <button>Fuktionen</button>
                 <div class="gridDivSec2">
+                    <div>
 
+                    </div>
                 </div>
+
             </div>
             <div class="gridDivSec3">
                 <a href="#section4"><i class="fas fa-angle-down"></i></a>
             </div>
         </section>
         <section class="sec4" id="section4">
+            <h1>Was sagen andere Nutzer*innen</h1>
+            <div class="slideshow-container">
 
-           
-            <a href="#section5"><i class="fas fa-angle-down"></i></a>
+                <div class="mySlides fade">
+
+                    <img class="eins" src="/assets/img/Man01.png" style="width:100%">
+
+                    <div class="nameText">
+                        <h5>Max Mustermann</h5>
+                        <p>dsvdssdssvsdvsdvdsvsdvsdvsdvsdvsvsdvsvdsvsvsdvsdv</p>
+                    </div>
+                </div>
+
+                <div class="mySlides fade">
+
+                    <img class="eins" src="/assets/img/Lady01.png" style="width:100%">
+
+                    <div class="nameText">
+                        <h5>Anna Musterfrau</h5>
+                        <p>dsvdssdssvsdvsdvdsvsdvsdvsdvsdvsvsdvsvdsvsvsdvsdv</p>
+                    </div>
+                </div>
+
+                <div class="mySlides fade">
+
+                    <img class="eins" src="/assets/img/Lady02.png" style="width:100%">
+
+                    <div class="nameText">
+                        <h5>Maike Makadamia</h5>
+                        <p>dsvdssdssvsdvsdvdsvsdvsdvsdvsdvsvsdvsvdsvsvsdvsdv</p>
+                    </div>
+                </div>
+
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+            </div>
+            <div class="stimme">
+                <p>Hier steht ein toller PR Satz.Am besten über oder drei Zeilen. <br>
+                Nicht zu kurz, aber auch nicht zu lang bitte.<br>
+                <span> Max Mustermann, Präsident Malteser Deutschland</span></p>
+                <button>mehr Stimmen</button>
+            </div>
+            <div class="smooth">
+                <a href="#section5"><i class="fas fa-angle-down"></i></a>
+            </div>
         </section>
         <section class="sec5" id="section5">
             <h1>hh</h1>
@@ -73,7 +120,15 @@
         </section>
     </Main>
     <footer id="footer">
-
+        <div>
+            <div class="footerDiv1">
+                <p>&copy; Via.-der Erinnerungsraum</p>
+                <span class="footerSpan1"><p>Impressum | Datenschutz | Kontakt</p></span>
+            </div>
+            <div class="footerDiv2">
+                <p>Mit freundlicher Unterstützung von:</p>
+            </div>
+        </div>
     </footer>
     <script src="../assets/js/main.js"></script>
 </body>
