--- a/assets/index.html
+++ b/assets/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>landingpage</title>
 </head>
 
@@ -17,33 +17,33 @@
         <section class="sec1" id="section1">
             <div class="eins">
                 <h3>Via.</h3>
-                <p class="">Gestalte mit Via individuelle Erinnerungsräume für <br> dich, deine Freunde und Familie.</p>
+                <p class="">Gestalte mit Via. individuelle Erinnerungsräume für <br> dich, deine Freunde und Familie.</p>
 
                 <a href="#section2"><i class="fas fa-angle-down"></i></a>
             </div>
         </section>
         <section class="sec2" id="section2">
             <div class="gridDiv1">
-                <img src="../assets/img/Hand_Iphone.png" alt="">
+                <img src="/assets/img/Hand_Iphone.png" alt="">
             </div>
             <div class="gridDiv2">
                 <h1 class="sec2H1">Der Ort für schöne Erinnerungen</h1>
-                <p>Gestalte mit Via individuelle Erinnerungsräume für <br> dich, deine Freunde und Familie.</p>
+                <p> Gestalte mit Via individuelle Erinnerungsräume für <br> dich, deine Freunde und Familie.</p>
             </div>
             <div class="gridDiv3">
-                <img src="../assets/img/camara-de-fotos.png" alt="">
+                <img src="/assets/img/camara-de-fotos.png" alt="">
                 <h1>Fotos</h1>
-                <p>Gestalte mit Via individuelle Erinnerungsräume für <br> dich, deine Freunde und Familie.</p>
+                <p>Hier kannst du Fotos von schönen Momenten und Ereignissen hochladen.</p>
             </div>
             <div class="gridDiv4">
-                <img src="../assets/img/Element 3.png" alt="">
+                <img src="/assets/img/Element 3.png" alt="">
                 <h1>Videos</h1>
-                <p>Gestalte mit Via individuelle Erinnerungsräume für <br> dich, deine Freunde und Familie.</p>
+                <p>Videos von z.B. Feierlichkeiten vermitteln eine lebendige Erinnerung. </p>
             </div>
             <div class="gridDiv5">
-                <img src="../assets/img/subir.png" alt="">
+                <img src="/assets/img/subir.png" alt="">
                 <h1>Dateien</h1>
-                <p>Gestalte mit Via individuelle Erinnerungsräume für <br> dich, deine Freunde und Familie.</p>
+                <p>Text und Sprachnachrichten, sowie Musik vervollständigen den Erinnerungsraum. </p>
             </div>
 
             <div class="gridDiv6">
@@ -53,8 +53,8 @@
         <section class="sec3" id="section3">
             <div class="gridDivSec1">
                 <h1>Ihr Privater Ort im internet</h1>
-                <p>Gestalte mit Via individuelle Erinnerungsräume für <br> dich, deine Freunde und Familie.</p>
-                <button>Fuktionen</button>
+                <p>Gestalte mit Via. individuelle Erinnerungsräume für <br> dich, deine Freunde und Familie.</p>
+                <button>Funktionen</button>
                 <div class="gridDivSec2">
                     <div>
 
@@ -71,32 +71,32 @@
             <div class="slideshow-container">
 
                 <div class="mySlides fade">
-
-                    <img class="eins" src="/assets/img/Man01.png" style="width:100%">
-
+                    <div class="test">
+                    <img class="eins" src="/assets/img/Man01.png" style="width:50%">
+                </div>
                     <div class="nameText">
-                        <h5>Max Mustermann</h5>
-                        <p>dsvdssdssvsdvsdvdsvsdvsdvsdvsdvsvsdvsvdsvsvsdvsdv</p>
+                        <h5>Antonio Esposito</h5>
+                        <p>"Via. gibt mir die Möglichkeit, die Trauer über den Tod meiner Mutter zu verarbeiten und mit meiner großen Familie zu teilen."</p>
                     </div>
                 </div>
 
                 <div class="mySlides fade">
-
-                    <img class="eins" src="/assets/img/Lady01.png" style="width:100%">
-
+                        <div class="test">
+                    <img class="eins" src="/assets/img/Lady01.png" style="width:50%">
+                        </div>
                     <div class="nameText">
-                        <h5>Anna Musterfrau</h5>
-                        <p>dsvdssdssvsdvsdvdsvsdvsdvsdvsdvsvsdvsvdsvsvsdvsdv</p>
+                        <h5>Anna Contzen</h5>
+                        <p>"Der Verlust meines Vaters war für mich ein einschneidendes Erlebnis. Der Erinnerungsraum Via. ist für mich ein Ort, über diesen Verlust hinwegzukommen."</p>
                     </div>
                 </div>
 
                 <div class="mySlides fade">
-
-                    <img class="eins" src="/assets/img/Lady02.png" style="width:100%">
-
+                        <div class="test">
+                    <img class="eins" src="/assets/img/Lady02.png" style="width:50%">
+                            </div>
                     <div class="nameText">
-                        <h5>Maike Makadamia</h5>
-                        <p>dsvdssdssvsdvsdvdsvsdvsdvsdvsdvsvsdvsvdsvsvsdvsdv</p>
+                        <h5>Maike Schmidt</h5>
+                        <p>"Der Erinnerungsraum Via. ist für mich ein Platz, um schöne Erinnerungen an meine verstorbene Schwester mit meinen Freunden und Verwandten auszutauschen. "</p>
                     </div>
                 </div>
 
@@ -105,8 +105,8 @@
 
             </div>
             <div class="stimme">
-                <p>Hier steht ein toller PR Satz.Am besten über oder drei Zeilen. <br>
-                Nicht zu kurz, aber auch nicht zu lang bitte.<br>
+                <p>"Mit Via. geben wir trauernden eine neue Möglichkeit, ihren Verlust mit Hilfe einer digitalen Plattform zu verarbeiten.<br>
+                   Malteser Deutschland beschreitet einen inovativen Weg, die Erfahrung von Trauer und Tod mit Tiefe und Lebendigkeit aufzuhellen. "<br>
                 <span> Max Mustermann, Präsident Malteser Deutschland</span></p>
                 <button>mehr Stimmen</button>
             </div>
@@ -115,22 +115,29 @@
             </div>
         </section>
         <section class="sec5" id="section5">
-            <h1>hh</h1>
+            
             <a href="#footer"><i class="fas fa-angle-down"></i></a>
         </section>
     </Main>
     <footer id="footer">
+         <div class="footerDiv2">
+                <p>Mit freundlicher Unterstützung von:</p>
+                <img src="/assets/img/Bild -1.png" alt="">
+                <img src="/assets/img/Bild -2.png" alt="">
+                <img src="/assets/img/gwm_logo-1.png" alt="">
+                <img src="/assets/img/SuperCode_Logo_20191003.png" alt="">
+                <img class="google" src="/assets/img/google.png" alt="">
+                <img class="apple" src="/assets/img/apple.png" alt="">
+            </div>
         <div>
             <div class="footerDiv1">
                 <p>&copy; Via.-der Erinnerungsraum</p>
                 <span class="footerSpan1"><p>Impressum | Datenschutz | Kontakt</p></span>
             </div>
-            <div class="footerDiv2">
-                <p>Mit freundlicher Unterstützung von:</p>
-            </div>
+           
         </div>
     </footer>
-    <script src="../assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
