--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>landingpage</title>
 </head>
 
@@ -25,24 +25,24 @@
         </section>
         <section class="sec2" id="section2">
             <div class="gridDiv1">
-                <img src="../assets/img/Hand_Iphone.png" alt="">
+                <img src="./assets/img/Hand_Iphone.png" alt="">
             </div>
             <div class="gridDiv2">
                 <h1 class="sec2H1">Der Ort für schöne Erinnerungen</h1>
                 <p> Gestalte mit Via individuelle Erinnerungsräume für <br> dich, deine Freunde und Familie.</p>
             </div>
             <div class="gridDiv3">
-                <img src="../assets/img/camara-de-fotos.png" alt="">
+                <img src="./assets/img/camara-de-fotos.png" alt="">
                 <h1>Fotos</h1>
                 <p>Hier kannst du Fotos von schönen Momenten und Ereignissen hochladen.</p>
             </div>
             <div class="gridDiv4">
-                <img src="../assets/img/Element 3.png" alt="">
+                <img src="./assets/img/Element 3.png" alt="">
                 <h1>Videos</h1>
                 <p>Videos von z.B. Feierlichkeiten vermitteln eine lebendige Erinnerung. </p>
             </div>
             <div class="gridDiv5">
-                <img src="../assets/img/subir.png" alt="">
+                <img src="./assets/img/subir.png" alt="">
                 <h1>Dateien</h1>
                 <p>Text und Sprachnachrichten, sowie Musik vervollständigen den Erinnerungsraum. </p>
             </div>
@@ -60,7 +60,7 @@
             </div>
                 <div class="gridDivSec2">
                     <div>
-                        <img src="../img/coulage.png" width="700px"  alt="">
+                        <img src="./img/coulage.png" width="700px"  alt="">
                     </div>
                 </div>
 
@@ -75,7 +75,7 @@
 
                 <div class="mySlides fade">
                     <div class="test">
-                        <img class="eins" src="../assets/img/Man01.png" style="width:50%">
+                        <img class="eins" src="./assets/img/Man01.png" style="width:50%">
                     </div>
                     <div class="nameText">
                         <h5>Antonio Esposito</h5>
@@ -86,7 +86,7 @@
 
                 <div class="mySlides fade">
                     <div class="test">
-                        <img class="eins" src="../assets/img/Lady01.png" style="width:50%">
+                        <img class="eins" src="./assets/img/Lady01.png" style="width:50%">
                     </div>
                     <div class="nameText">
                         <h5>Anna Contzen</h5>
@@ -97,7 +97,7 @@
 
                 <div class="mySlides fade">
                     <div class="test">
-                        <img class="eins" src="../assets/img/Lady02.png" style="width:50%">
+                        <img class="eins" src="./assets/img/Lady02.png" style="width:50%">
                     </div>
                     <div class="nameText">
                         <h5>Maike Schmidt</h5>
@@ -146,12 +146,12 @@
     <footer id="footer">
         <div class="footerDiv2">
             <p>Mit freundlicher Unterstützung von:</p>
-            <img src="../assets/img/Bild -1.png" alt="">
-            <img src="../assets/img/Bild -2.png" alt="">
-            <img src="../assets/img/gwm_logo-1.png" alt="">
-            <img src="../assets/img/SuperCode_Logo_20191003.png" alt="">
-            <img class="google" src="../assets/img/google.png" alt="">
-            <img class="apple" src="../assets/img/apple.png" alt="">
+            <img src="./assets/img/Bild -1.png" alt="">
+            <img src="./assets/img/Bild -2.png" alt="">
+            <img src="./assets/img/gwm_logo-1.png" alt="">
+            <img src="./assets/img/SuperCode_Logo_20191003.png" alt="">
+            <img class="google" src="./assets/img/google.png" alt="">
+            <img class="apple" src="./assets/img/apple.png" alt="">
         </div>
         <div>
             <div class="footerDiv1">
@@ -163,7 +163,7 @@
 
         </div>
     </footer>
-    <script src="../assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
